--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.7</version>
+		<version>2.3.5.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -16,7 +16,11 @@
 	<description>Demo for DevSecOps</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<tomcat.version>9.0.43</tomcat.version>
+		<spring-security.version>5.4.4</spring-security.version>
 	</properties>
 
 	<dependencies>
@@ -35,6 +39,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.2.30</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -43,64 +58,73 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			  <!--                   PITest Mutation Plugin                   -->
-			<plugin>
-			    <groupId>org.pitest</groupId>
-			    <artifactId>pitest-maven</artifactId>
-			    <version>1.5.0</version>
-			    <dependencies>
-					 <dependency>
-						  <groupId>org.pitest</groupId>
-						  <artifactId>pitest-junit5-plugin</artifactId>
-						  <version>0.12</version>
-					 </dependency>
-			    </dependencies>
-			    <configuration>
-					<!-- Mutation score must be higher than the below threshold number -->
-			     	<mutationThreshold>39</mutationThreshold>
-			     	<outputFormats>
-			             <outputFormat>XML</outputFormat>
-			             <outputFormat>HTML</outputFormat>
-			        </outputFormats>
-			    </configuration>
-			</plugin>
 			<!--                   Jacoco Plugin                   -->
-			<plugin>
+			   <plugin>
 			    <groupId>org.jacoco</groupId>
 			    <artifactId>jacoco-maven-plugin</artifactId>
 			    <version>0.8.5</version>
 			    <executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
+			     <execution>
+			      <goals>
+			       <goal>prepare-agent</goal>
+			      </goals>
+			     </execution>
+			     <execution>
+			      <id>report</id>
+			      <phase>test</phase>
+			      <goals>
+			       <goal>report</goal>
+			      </goals>
+			     </execution>
 			    </executions>
-			</plugin>
+			   </plugin>
+
+			   <!--                   PITest Mutation Plugin                   -->
+			   <plugin>
+			    <groupId>org.pitest</groupId>
+			    <artifactId>pitest-maven</artifactId>
+			    <version>1.5.0</version>
+			    <dependencies>
+			     <dependency>
+			      <groupId>org.pitest</groupId>
+			      <artifactId>pitest-junit5-plugin</artifactId>
+			      <version>0.12</version>
+			     </dependency>
+			    </dependencies>
+			    <configuration>
+			     <mutationThreshold>70</mutationThreshold>
+			     <outputFormats>
+			             <outputFormat>XML</outputFormat>
+			             <outputFormat>HTML</outputFormat>
+			        </outputFormats>
+			    </configuration>
+			   </plugin>
+
 			<!--                   Dependency Check Plugin                   -->
-			<plugin>
+			   <plugin>
 			    <groupId>org.owasp</groupId>
 			    <artifactId>dependency-check-maven</artifactId>
 			    <version>6.1.6</version>
 			    <configuration>
-			     	<format>ALL</format>
-			     	<failBuildOnCVSS>8</failBuildOnCVSS> <!-- fail the build for CVSS greater than or equal to 9 -->
+			     <format>ALL</format>
+			     <failBuildOnCVSS>8</failBuildOnCVSS> <!-- fail the build for CVSS greater than or equal to 9 -->
 
-					<!-- 
-					use internal mirroring of CVE contents 
-					Suppress files 
-					E.g. a company-wide suppression file and local project file 
-					-->
-
+			     <!-- 
+			      use internal mirroring of CVE contents 
+			      Suppress files 
+			      E.g. a company-wide suppression file and local project file 
+			     -->
+			     <!-- 
+			     <cveUrlModified>http://internal-mirror.mycorp.com/nvdcve-1.1-modified.json.gz</cveUrlModified>  
+			                    <cveUrlBase>http://internal-mirror.mycorp.com/nvdcve-1.1-%d.json.gz</cveUrlBase>
+			     <suppressionFiles>               
+			                        <suppressionFile>http://example.org/suppression.xml</suppressionFile>
+			                        <suppressionFile>project-suppression.xml</suppressionFile> 
+			                    </suppressionFiles> 
+			                 -->
 			    </configuration>
-			</plugin>
+			   </plugin>
+
 		</plugins>
 	</build>
 
