set serviceaccountname to default

--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -15,12 +15,14 @@ spec:
       labels:
         app: devsecops
     spec:
+      serviceAccountName: default  # default not recommended
       containers:
       - image: replace
         name: devsecops-container
         securityContext:
           runAsNonRoot: true
           runAsUser: 100
+          readOnlyRootFilessystem: true
 ---
 apiVersion: v1
 kind: Service
