update k8s permission issues

--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -15,10 +15,16 @@ spec:
       labels:
         app: devsecops
     spec:
+      volumes:
+      - name: volume
+        emptyDir: {}
       serviceAccountName: default  # default not recommended
       containers:
       - image: replace
         name: devsecops-container
+        volumeMounts:
+        - mountPath: /tmp
+          name: volume
         securityContext:
           runAsNonRoot: true
           runAsUser: 100
